# scrum_updates

./: README.md  main.py  pyproject.toml
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  scrum_updates.baml
templates/: index.html  scrum_response.html
